--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ webpki-roots = "0.23"
 pem = "1.0.2"
 thiserror = "1.0.31"
 x509-parser = "0.13.2"
-chrono = "0.4.19"
+chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 url = "2.2.2"
 async-trait = "0.1.53"
 smol = "1.3"
